# dtkcore

./: .gitignore  CMakeLists.txt  compile.sh
cmake/: cmake.conf  config.cmake  dtkcore_common.cmake
cmake/DtkCMake5.5/: DtkCMake5.5Config.cmake
cmake/DtkCore/: DtkCoreConfig.cmake.in  qt_lib_dtkcore.pri.in
cmake/DtkCore5.5/: DtkCore5.5Config.cmake.in  dtkcore5.5.pc.in
cmake/DtkTools/: DtkTools5.5Config.cmake
debian/: changelog  control  libdtkcore5.5-bin.install  rules
examples/expintf-example/: expintf-example.pro
src/: CMakeLists.txt  src.pro
src/settings/: dsettingsgroup.cpp  dsettingsgroup.h
tests/: CMakeLists.txt  main.cpp  tests.pro  ut_dfilewatcher.cpp  ut_dutil.cpp  ut_dvtablehook.cpp
tests/ddesktopentry/: ddesktopentry.pro
tests/dthreadutils/: dthreadutils.pro
tests/dutils/: dutils.pro
tests/dvtablehook/: dvtablehook.pro
tools/deepin-os-release/: CMakeLists.txt  deepin-os-release.pro
tools/qdbusxml2cpp/: CMakeLists.txt
tools/settings/: CMakeLists.txt  settings.pro
